--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-   
+  <div class="main">
+    <div id="container"
+      <div class="header">
+        <img class="logo" src="img/mylogo.jpg"></img>
+
+
+      </div>
+    </div>
+
+  </div>
+
 </body>
 </html>
