--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <div class="main">
     <div id="container"
       <div class="header">
-        <img class="logo" src="img/mylogo.jpg"></img>
+        <img class="logo" src="img/mylogo.png" width="70px" height="70px"></img>
+         <nav>
+
 
 
       </div>
