--- a/index.html
+++ b/index.html
@@ -13,8 +13,17 @@
       <div class="header">
         <img class="logo" src="img/mylogo.png" width="70px" height="70px"></img>
          <nav>
+           <li><a href="#">Home</a></li>
+           <li><a href="#">Resume</a></li>
+           <li><a href="#">MyWork</a></li>
+           <li><a href="#">LetsConnect</a></li>
+         </nav>
+         <div>
+           <span><h1>Hi, I am Kseniia</h1></span>
+           <span><h2>Graphic Artist | Illustrator | Web Developer</h2></span>
 
 
+         </div>
 
       </div>
     </div>
