changed nav tag

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <div class="header">
         <img class="logo" src="img/mylogo.png" width="70px" height="70px"></img>
          <nav>
-           <li><a href="#">Home</a></li>
-           <li><a href="#">Resume</a></li>
-           <li><a href="#">MyWork</a></li>
-           <li><a href="#">LetsConnect</a></li>
+           <a href="#">Home</a>
+          <a href="#">Resume</a>
+          <a href="#">MyWork</a>
+          <a href="#">LetsConnect</a>
          </nav>
          <div>
            <span><h1>Hi, I am Kseniia</h1></span>
