--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="main">
+  <div id="main">
     <div id="container"
       <div class="header">
-        <img class="logo" src="img/mylogo.png" width="70px" height="70px"></img>
+        <img class="logo" src="img/mylogo.png" alt="logopicture" width="70px" height="70px"/>
          <nav>
            <a href="#">Home</a>
           <a href="#">Resume</a>
